--- a/Nix/Info.plist
+++ b/Nix/Info.plist
@@ -27,6 +27,7 @@
 		<string>Montserrat-Light.ttf</string>
 		<string>Montserrat-Medium.ttf</string>
 		<string>Montserrat-Regular.ttf</string>
+		<string>Bungee-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
