--- a/Nix/Info.plist
+++ b/Nix/Info.plist
@@ -12,6 +12,16 @@
 				<string>com.googleusercontent.apps.619760553436-cvr4rum3g66l7knjji81n76n1rag8i0b</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>Open_App</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>nix.Nix</string>
+			</array>
+		</dict>
 	</array>
 	<key>NSCalendarsFullAccessUsageDescription</key>
 	<string>Connect to your calendar to create, delete, edit, and fetch your events.</string>
