--- a/Nix/Info.plist
+++ b/Nix/Info.plist
@@ -38,6 +38,7 @@
 		<string>Montserrat-Medium.ttf</string>
 		<string>Montserrat-Regular.ttf</string>
 		<string>Bungee-Regular.ttf</string>
+		<string>Aldrich-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
