--- a/ReportExtension Nix/Info.plist
+++ b/ReportExtension Nix/Info.plist
@@ -13,6 +13,7 @@
 		<string>Montserrat-Regular.ttf</string>
 		<string>Montserrat-Medium.ttf</string>
 		<string>Montserrat-Bold.ttf</string>
+		<string>Bungee-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
